--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,9 @@
         font-size: 15px;
         letter-spacing: 1px;
     }
+    .profile {
+        width: 25%;
+    }
 }
 
 
@@ -26,6 +29,9 @@
     h3 {
         font-size: 10px;
         letter-spacing: 0px;
+    }
+    .profile {
+        width: 35%;
     }
 }
 
@@ -103,7 +109,6 @@ section {
 .profile {
     align-self: center;
     border-radius: 50%;
-    width: 25%;
     background-color: #3D3D3D3D;
 }
 
