--- a/styles/index.css
+++ b/styles/index.css
@@ -40,13 +40,18 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Noto Sans', sans-serif;
-    background-color: #D9D9D9;
     height: 100%;
     width: 100%;
+    background-image: url("../data/background.gif");
+    background-color: #cccccc;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 nav {
-    background-color: #D3D3D3;
+    background-color: #0E0F3B;
     text-align: center;
 }
 
@@ -75,20 +80,20 @@ nav a {
 }
 
 nav a:link {
-    color: black;
+    color: #F1F1F1;
 }
 
 nav a:visited {
-    color: black;
+    color: #F1F1F1;
 }
 
 nav a:hover {
-    background-color: rgba(128, 204, 255, 0.929);
-    color: white;
+    background-color: #7fdeee;
+    color: #0E0F3B;
 }
 
 section {
-    height: calc(100% - 62px);
+    height: calc(100% - 64px);
 }
 
 .sect {
@@ -119,26 +124,39 @@ section {
 }
 
 .butt {
-    padding: 15px 10px;
-    background-color: white;
+    padding:15px 30px;
+    background-color: #0E0F3B;
     border-radius: 10px;
     width: 100px;
     text-decoration: none;
-    color: black;
+    color: #F1F1F1;
     margin: 0 25px;
 }
 
 .butt:hover {
-    background-color: rgba(128, 204, 255, 0.929);
-    color: white;
+    background-color: #7fdeee;
+    color: #0E0F3B;
 }
 
 h1 {
     margin: 50px 0 0 0;
     padding: 0;
+    color: blanchedalmond;
 }
 
 h3 {
     padding: 0;
     margin: 0 0 50px 0;
+    color: blanchedalmond;
+}
+
+.social-icon{
+    border-radius: 50%;
+    max-width: 40px;
+    padding: 0 20px 0 20px;
+}
+
+.social{
+    margin: 40px 0 0 0;
+    color: black;
 }
