Final for presentation

--- a/styles/index.css
+++ b/styles/index.css
@@ -42,7 +42,7 @@ body {
     font-family: 'Noto Sans', sans-serif;
     height: 100%;
     width: 100%;
-    background-image: url("../data/background.gif");
+    background-image: url("../data/background.png");
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
