--- a/styles/about.css
+++ b/styles/about.css
@@ -321,7 +321,7 @@ h5 {
     margin-top: 3%;
     align-self: center;
     max-width: 90%;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
     box-shadow: 1PX 1PX 10px gray;
     border-radius: 8%;
@@ -343,9 +343,39 @@ input{
 }
 button{
     display: flex;
-    background-color: #D3C25E;
-    padding: 5px 10px;
-    border-radius: 15%;
+    background-color: #4F51E0;
+    padding: 10px 25px;
     margin: 15px 0 0 0;
-    align-self: flex-end;
+    color: azure;
+    font-size: 18px;
+}
+
+footer{
+    background-color: #0E0F3B;
+    color: azure;
+    padding: 30px 20%;
+}
+
+footer ul {
+    margin: 0;
+    padding: 0;
+    color: azure;
+}
+
+footer li {
+    display: inline;
+    padding: 0px 5px;
+    color: azure;
+}
+
+footer a {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    color: azure;
+    padding: 20px;
+}
+
+.r{
+    text-align: right;
 }
